[tool.poetry]
name = "miltesttask"
version = "0.1.0"
description = ""
authors = ["Nikita Borisov <nik-everyday@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

